# Computer-Graphics

Project 2/: CMakeLists.txt  Polygon.cpp  Polygon.h  README.md  ViewGL.cpp  ViewGL.h  bunny_scene  main.cpp  test_scene
Project 2/Project2/: CMakeLists.txt  Polygon.h  bunny_scene  main.cpp  test_scene
Project3/: CMakeLists.txt  Polygon.cpp  Polygon.h  Polygon2D.cpp  Polygon2D.h  View.cpp  View.h  cube_and_icosahedron.txt  main.cpp  test.txt  test_scene
Project3/Project3/: CMakeLists.txt  Polygon.h  Polygon2D.cpp  Polygon2D.h  README.md  cube_and_icosahedron.txt  main.cpp
project 1/: Clipping.cpp  ClippingPolygon.cpp  ClippingPolygon.h  ControllerGL.cpp  ControllerGL.h  HelloGraphics.cpp  Polygon.cpp  Polygon.h  Transform.cpp  Transform.h  Util.cpp  ViewGL.cpp  ViewGL.h  main.cpp  test_scene
project 1/Resource/: test_scene
project 1/Submit/: CMakeLists.txt  Clipping.cpp  Clipping.h  ClippingPolygon.cpp  ClippingPolygon.h  ModelGL.cpp  ModelGL.h  Polygon.cpp  Polygon.h  README.md  Transform.cpp  Transform.h  Util.cpp  Util.h  ViewGL.h  main.cpp
project 1/Submit/cmake-build/: CMakeCache.txt  Makefile  Project1  cmake_install.cmake
project 1/glut_make_pixel/: demo.cpp
